--- a/soal.html
+++ b/soal.html
@@ -112,28 +112,30 @@
 
     <script>
       const userId = localStorage.getItem("userId");
-      const sudahSubmit = localStorage.getItem("sudahSubmit") === "true";
 
       fetch(`/.netlify/functions/check-unlock?id=${userId}`)
         .then((res) => res.json())
         .then(({ unlocked }) => {
           if (unlocked) {
             localStorage.removeItem("aksesSoalTerkunci");
-            if (!localStorage.getItem("waktuMulai")) {
-              localStorage.setItem("waktuMulai", Date.now().toString());
-            }
+            localStorage.removeItem("sudahSubmit");
+            localStorage.removeItem("skor");
+            localStorage.removeItem("soalIndex");
+            localStorage.removeItem("jawabanTerkunci");
+            localStorage.setItem("waktuMulai", Date.now().toString());
           }
 
+          const sudahSubmit = localStorage.getItem("sudahSubmit") === "true";
           const terkunci = localStorage.getItem("aksesSoalTerkunci") === "true";
           if (
             (terkunci && !unlocked && userId !== "satrio-1234") ||
             sudahSubmit
           ) {
             window.location.href = "leaderboard.html";
+          } else {
+            tampilkanSoal();
+            startTimer();
           }
-
-          tampilkanSoal();
-          startTimer();
         });
 
       const htmlEditor = CodeMirror.fromTextArea(
@@ -225,28 +227,33 @@
           const id = localStorage.getItem("userId") || "anonim";
           const name = localStorage.getItem("userName") || "Peserta";
 
-          try {
-            const res = await fetch("/.netlify/functions/submit-score", {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({
-                id,
-                name,
-                score: finalScore,
-                duration: durasi,
-              }),
-            });
-            if (!res.ok) throw new Error("Submit gagal");
-            localStorage.setItem("sudahSubmit", "true");
-            localStorage.setItem("aksesSoalTerkunci", "true");
-            localStorage.removeItem("skor");
-            localStorage.removeItem("soalIndex");
-            localStorage.removeItem("jawabanTerkunci");
-            localStorage.removeItem("waktuMulai");
-            window.location.href = "leaderboard.html";
-          } catch (err) {
-            alert("Gagal menyimpan skor: " + err.message);
+          const sudahSubmit = localStorage.getItem("sudahSubmit") === "true";
+          if (!sudahSubmit) {
+            try {
+              const res = await fetch("/.netlify/functions/submit-score", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                  id,
+                  name,
+                  score: finalScore,
+                  duration: durasi,
+                }),
+              });
+              if (!res.ok) throw new Error("Submit gagal");
+              localStorage.setItem("sudahSubmit", "true");
+              localStorage.setItem("aksesSoalTerkunci", "true");
+            } catch (err) {
+              alert("Gagal menyimpan skor: " + err.message);
+              return;
+            }
           }
+
+          localStorage.removeItem("skor");
+          localStorage.removeItem("soalIndex");
+          localStorage.removeItem("jawabanTerkunci");
+          localStorage.removeItem("waktuMulai");
+          window.location.href = "leaderboard.html";
         } else {
           localStorage.setItem("soalIndex", soalIndex);
           tampilkanSoal();
