--- a/soal.html
+++ b/soal.html
@@ -110,180 +110,190 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/css/css.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/javascript/javascript.min.js"></script>
 
-    <script>
-      const userId = localStorage.getItem("userId");
+    <!-- Bagian dalam <script> -->
+<script>
+  const userId = localStorage.getItem("userId");
 
-      fetch(`/.netlify/functions/check-unlock?id=${userId}`)
-        .then((res) => res.json())
-        .then(({ unlocked }) => {
-          if (unlocked) {
-            localStorage.removeItem("aksesSoalTerkunci");
-            localStorage.removeItem("sudahSubmit");
-            localStorage.removeItem("skor");
-            localStorage.removeItem("soalIndex");
-            localStorage.removeItem("jawabanTerkunci");
-            localStorage.setItem("waktuMulai", Date.now().toString());
-          }
-
-          const sudahSubmit = localStorage.getItem("sudahSubmit") === "true";
-          const terkunci = localStorage.getItem("aksesSoalTerkunci") === "true";
-          if (
-            (terkunci && !unlocked && userId !== "satrio-1234") ||
-            sudahSubmit
-          ) {
-            window.location.href = "leaderboard.html";
-          } else {
-            tampilkanSoal();
-            startTimer();
-          }
-        });
-
-      const htmlEditor = CodeMirror.fromTextArea(
-        document.getElementById("htmlEditor"),
-        { mode: "xml", lineNumbers: true }
-      );
-      const cssEditor = CodeMirror.fromTextArea(
-        document.getElementById("cssEditor"),
-        { mode: "css", lineNumbers: true }
-      );
-      const jsEditor = CodeMirror.fromTextArea(
-        document.getElementById("jsEditor"),
-        { mode: "javascript", lineNumbers: true }
-      );
-
-      function generateRandomSoal(count = 10) {
-        const kombinasi = [
-          {
-            deskripsi:
-              "Buat form login dengan validasi JavaScript untuk memastikan input tidak kosong sebelum dikirim.",
-            html: "",
-            css: "",
-            js: "",
-          },
-          {
-            deskripsi:
-              "Buat tabel HTML dengan 5 baris dan beri pewarnaan baris genap menggunakan CSS.",
-            html: "",
-            css: "",
-            js: "",
-          },
-          {
-            deskripsi:
-              "Buat tombol yang ketika diklik, akan menambah elemen list baru ke dalam <ul> menggunakan JavaScript.",
-            html: "",
-            css: "",
-            js: "",
-          },
-        ];
-
-        const hasil = [];
-        for (let i = 0; i < count; i++) {
-          const soal = kombinasi[i % kombinasi.length];
-          hasil.push({ id: i + 1, ...soal });
-        }
-        return hasil;
+  fetch(`/.netlify/functions/check-unlock?id=${userId}`)
+    .then((res) => res.json())
+    .then(({ unlocked }) => {
+      if (unlocked) {
+        localStorage.removeItem("aksesSoalTerkunci");
+        localStorage.removeItem("sudahSubmit");
+        localStorage.removeItem("skor");
+        localStorage.removeItem("soalIndex");
+        localStorage.removeItem("jawabanTerkunci");
+        localStorage.setItem("waktuMulai", Date.now().toString());
       }
 
-      const soalData = generateRandomSoal(10);
-      let skor = parseInt(localStorage.getItem("skor")) || 0;
-      let soalIndex = parseInt(localStorage.getItem("soalIndex")) || 0;
-      let jawabanTerkunci =
-        JSON.parse(localStorage.getItem("jawabanTerkunci")) || [];
-      let waktuMulai = parseInt(localStorage.getItem("waktuMulai"));
-
-      function tampilkanSoal() {
-        const soal = soalData[soalIndex];
-        document.getElementById("judulSoal").textContent = `Soal ${
-          soalIndex + 1
-        }`;
-        document.getElementById("deskripsiSoal").textContent = soal.deskripsi;
-        htmlEditor.setValue(soal.html);
-        cssEditor.setValue(soal.css);
-        jsEditor.setValue(soal.js);
-        document.getElementById("score").textContent = `Score: ${skor}`;
+      const sudahSubmit = localStorage.getItem("sudahSubmit") === "true";
+      const terkunci = localStorage.getItem("aksesSoalTerkunci") === "true";
+      if ((terkunci && !unlocked && userId !== "satrio-1234") || sudahSubmit) {
+        window.location.href = "leaderboard.html";
+      } else {
+        tampilkanSoal();
+        startTimer();
       }
+    });
 
-      function compileCode() {
-        if (jawabanTerkunci.includes(soalIndex)) return;
-        skor += 100;
-        jawabanTerkunci.push(soalIndex);
-        localStorage.setItem("skor", skor);
-        localStorage.setItem(
-          "jawabanTerkunci",
-          JSON.stringify(jawabanTerkunci)
-        );
-        document.getElementById("score").textContent = `Score: ${skor}`;
-      }
+  const htmlEditor = CodeMirror.fromTextArea(
+    document.getElementById("htmlEditor"),
+    { mode: "xml", lineNumbers: true }
+  );
+  const cssEditor = CodeMirror.fromTextArea(
+    document.getElementById("cssEditor"),
+    { mode: "css", lineNumbers: true }
+  );
+  const jsEditor = CodeMirror.fromTextArea(
+    document.getElementById("jsEditor"),
+    { mode: "javascript", lineNumbers: true }
+  );
 
-      async function nextSoal() {
-        soalIndex++;
-        if (soalIndex >= soalData.length) {
-          const waktuSelesai = Date.now();
-          const durasi = waktuSelesai - waktuMulai;
-          const sisaWaktuMs = getBatasWaktu() - waktuSelesai;
-          const bonusWaktu = Math.floor(sisaWaktuMs / 3600000) * 50;
-          const finalScore = skor + bonusWaktu;
+  function generateRandomSoal(count = 10) {
+    const kombinasi = [
+      {
+        deskripsi: "Buat form login dengan validasi JavaScript.",
+        html: "",
+        css: "",
+        js: "",
+      },
+      {
+        deskripsi: "Buat tabel HTML 5 baris dengan pewarnaan baris genap.",
+        html: "",
+        css: "",
+        js: "",
+      },
+      {
+        deskripsi: "Tombol yang menambah item <ul> saat diklik.",
+        html: "",
+        css: "",
+        js: "",
+      },
+    ];
+    const hasil = [];
+    for (let i = 0; i < count; i++) {
+      const soal = kombinasi[i % kombinasi.length];
+      hasil.push({ id: i + 1, ...soal });
+    }
+    return hasil;
+  }
 
-          const id = localStorage.getItem("userId") || "anonim";
-          const name = localStorage.getItem("userName") || "Peserta";
+  const soalData = generateRandomSoal(10);
+  let skor = parseInt(localStorage.getItem("skor")) || 0;
+  let soalIndex = parseInt(localStorage.getItem("soalIndex")) || 0;
+  let jawabanTerkunci =
+    JSON.parse(localStorage.getItem("jawabanTerkunci")) || [];
+  let waktuMulai = parseInt(localStorage.getItem("waktuMulai"));
 
-          const sudahSubmit = localStorage.getItem("sudahSubmit") === "true";
-          if (!sudahSubmit) {
-            try {
-              const res = await fetch("/.netlify/functions/submit-score", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                  id,
-                  name,
-                  score: finalScore,
-                  duration: durasi,
-                }),
-              });
-              if (!res.ok) throw new Error("Submit gagal");
-              localStorage.setItem("sudahSubmit", "true");
-              localStorage.setItem("aksesSoalTerkunci", "true");
-            } catch (err) {
-              const text = await res.text();
-              alert("Gagal menyimpan skor:\n" + text);
-              return;
-            }
+  function tampilkanSoal() {
+    const soal = soalData[soalIndex];
+    document.getElementById("judulSoal").textContent = `Soal ${soalIndex + 1}`;
+    document.getElementById("deskripsiSoal").textContent = soal.deskripsi;
+    htmlEditor.setValue(soal.html);
+    cssEditor.setValue(soal.css);
+    jsEditor.setValue(soal.js);
+    document.getElementById("score").textContent = `Score: ${skor}`;
+  }
+
+  function compileCode() {
+    if (jawabanTerkunci.includes(soalIndex)) return;
+
+    const html = htmlEditor.getValue().trim();
+    const css = cssEditor.getValue().trim();
+    const js = jsEditor.getValue().trim();
+
+    if (!html && !css && !js) {
+      alert("Silakan isi dan compile jawaban terlebih dahulu.");
+      return;
+    }
+
+    skor += 100;
+    jawabanTerkunci.push(soalIndex);
+    localStorage.setItem("skor", skor);
+    localStorage.setItem("jawabanTerkunci", JSON.stringify(jawabanTerkunci));
+    document.getElementById("score").textContent = `Score: ${skor}`;
+  }
+
+  async function nextSoal() {
+    if (!jawabanTerkunci.includes(soalIndex)) {
+      alert("Silakan klik Compile sebelum lanjut ke soal berikutnya.");
+      return;
+    }
+
+    soalIndex++;
+
+    if (soalIndex >= soalData.length) {
+      const waktuSelesai = Date.now();
+      const durasi = waktuSelesai - waktuMulai;
+      const sisaWaktuMs = getBatasWaktu() - waktuSelesai;
+      const bonusWaktu = Math.floor(sisaWaktuMs / 3600000) * 50;
+      const finalScore = skor + bonusWaktu;
+
+      const id = localStorage.getItem("userId") || "anonim";
+      const name = localStorage.getItem("userName") || "Peserta";
+
+      const sudahSubmit = localStorage.getItem("sudahSubmit") === "true";
+
+      if (!sudahSubmit) {
+        try {
+          const res = await fetch("/.netlify/functions/submit-score", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ id, name, score: finalScore, duration: durasi }),
+          });
+
+          const text = await res.text();
+
+          if (!res.ok) {
+            console.error("Server error:", text);
+            throw new Error(text);
           }
 
-          localStorage.removeItem("skor");
-          localStorage.removeItem("soalIndex");
-          localStorage.removeItem("jawabanTerkunci");
-          localStorage.removeItem("waktuMulai");
-          window.location.href = "leaderboard.html";
-        } else {
-          localStorage.setItem("soalIndex", soalIndex);
-          tampilkanSoal();
+          localStorage.setItem("sudahSubmit", "true");
+          localStorage.setItem("aksesSoalTerkunci", "true");
+        } catch (err) {
+          alert("Gagal menyimpan skor: " + err.message);
+          return;
         }
       }
 
-      function getBatasWaktu() {
-        const batas = new Date();
-        batas.setHours(24, 0, 0, 0);
-        return batas.getTime();
-      }
+      // Clear all state
+      localStorage.removeItem("skor");
+      localStorage.removeItem("soalIndex");
+      localStorage.removeItem("jawabanTerkunci");
+      localStorage.removeItem("waktuMulai");
 
-      function startTimer() {
-        const timerEl = document.getElementById("timer");
-        const interval = setInterval(() => {
-          const sisa = getBatasWaktu() - Date.now();
-          if (sisa <= 0) {
-            clearInterval(interval);
-            timerEl.textContent = "Waktu Habis!";
-            alert("Waktu kuis telah habis!");
-            window.location.href = "leaderboard.html";
-          } else {
-            const jam = Math.floor(sisa / (1000 * 60 * 60));
-            const menit = Math.floor((sisa % (1000 * 60 * 60)) / (1000 * 60));
-            const detik = Math.floor((sisa % (1000 * 60)) / 1000);
-            timerEl.textContent = `${jam}j ${menit}m ${detik}d`;
-          }
-        }, 1000);
+      window.location.href = "leaderboard.html";
+    } else {
+      localStorage.setItem("soalIndex", soalIndex);
+      tampilkanSoal();
+    }
+  }
+
+  function getBatasWaktu() {
+  const batas = new Date();
+  batas.setDate(batas.getDate() + 1);
+  batas.setHours(12, 0, 0, 0);
+  return batas.getTime();
+  }
+
+  function startTimer() {
+    const timerEl = document.getElementById("timer");
+    const interval = setInterval(() => {
+      const sisa = getBatasWaktu() - Date.now();
+      if (sisa <= 0) {
+        clearInterval(interval);
+        timerEl.textContent = "Waktu Habis!";
+        alert("Waktu kuis telah habis!");
+        window.location.href = "leaderboard.html";
+      } else {
+        const jam = Math.floor(sisa / (1000 * 60 * 60));
+        const menit = Math.floor((sisa % (1000 * 60 * 60)) / (1000 * 60));
+        const detik = Math.floor((sisa % (1000 * 60)) / 1000);
+        timerEl.textContent = `${jam}j ${menit}m ${detik}d`;
       }
-    </script>
+    }, 1000);
+  }
+</script>
   </body>
 </html>
