--- a/soal.html
+++ b/soal.html
@@ -229,33 +229,42 @@
       const bonusWaktu = Math.floor(sisaWaktuMs / 3600000) * 50;
       const finalScore = skor + bonusWaktu;
 
-      const id = localStorage.getItem("userId") || "anonim";
-      const name = localStorage.getItem("userName") || "Peserta";
+      const id = localStorage.getItem("userId");
+const name = localStorage.getItem("userName");
 
-      const sudahSubmit = localStorage.getItem("sudahSubmit") === "true";
+if (!id || !name) {
+  alert("ID atau nama tidak ditemukan. Silakan login ulang.");
+  return;
+}
 
-      if (!sudahSubmit) {
-        try {
-          const res = await fetch("/.netlify/functions/submit-score", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ id, name, score: finalScore, duration: durasi }),
-          });
+const durasi = Date.now() - waktuMulai;
+const sisaWaktuMs = getBatasWaktu() - Date.now();
+const bonusWaktu = Math.floor(sisaWaktuMs / 3600000) * 50;
+const finalScore = skor + bonusWaktu;
 
-          const text = await res.text();
+console.log("Mengirim ke server:", { id, name, score: finalScore, duration: durasi });
 
-          if (!res.ok) {
-            console.error("Server error:", text);
-            throw new Error(text);
-          }
-
-          localStorage.setItem("sudahSubmit", "true");
-          localStorage.setItem("aksesSoalTerkunci", "true");
-        } catch (err) {
-          alert("Gagal menyimpan skor: " + err.message);
-          return;
-        }
-      }
+try {
+  const res = await fetch("/.netlify/functions/submit-score", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ id, name, score: finalScore, duration: durasi }),
+  });
+  if (!res.ok) {
+    const text = await res.text();
+    throw new Error(text);
+  }
+  localStorage.setItem("sudahSubmit", "true");
+  localStorage.setItem("aksesSoalTerkunci", "true");
+  localStorage.removeItem("skor");
+  localStorage.removeItem("soalIndex");
+  localStorage.removeItem("jawabanTerkunci");
+  localStorage.removeItem("waktuMulai");
+  window.location.href = "leaderboard.html";
+} catch (err) {
+  alert("Gagal menyimpan skor:\n" + err.message);
+}
+    }
 
       // Clear all state
       localStorage.removeItem("skor");
