--- a/soal.html
+++ b/soal.html
@@ -263,7 +263,7 @@ try {
   window.location.href = "leaderboard.html";
 } catch (err) {
   alert("Gagal menyimpan skor:\n" + err.message);
-}
+}return;
     }
 
       // Clear all state
